tests/semantic_cases/invalid/if_undefined_condition.ob0
(* INVALID: IF condition references undefined symbol *)
MODULE Main;
BEGIN
  IF unknown THEN
    WriteInt(1)
  END
END Main.
